# footron-api

./: .gitignore  setup.cfg
api/: constants.py
api/data/: controller.py
footron_api/: __init__.py  app.py  constants.py
footron_api/data/: __init__.py  auth.py  colors.py  controller.py  lock.py
footron_api/protocol/: messages.py
footron_api/routes/: api.py  messaging.py
footron_web_build/: build.py
