[metadata]
name = footron-api
version = 0.1
url = https://github.com/BYU-PCCL/footron-api
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
install_requires =
    footron-protocol @ git+https://github.com/BYU-PCCL/footron-protocol-python.git
    footron-router @ git+https://github.com/BYU-PCCL/footron-router.git
    fastapi
    uvicorn[standard]
    aiohttp
    standard
    pydantic
    colorgram.py
    xdg
